--- a/refactoring/pom.xml
+++ b/refactoring/pom.xml
@@ -45,6 +45,11 @@
       <artifactId>refactoring-miner</artifactId>
       <version>3.0.10</version>
     </dependency>
+    <dependency>
+      <groupId>org.eclipse.jgit</groupId>
+      <artifactId>org.eclipse.jgit</artifactId>
+      <version>7.1.0.202411261347-r</version>
+    </dependency>
   </dependencies>
 
   <build>
